--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
         }
     }
 
-    h1 {
+    h1 { /* General H1, hero one is more specific */
       font-size: 3.2rem;
       margin-bottom: 1.5rem;
       line-height: 1.3;
@@ -375,17 +375,9 @@
       color: var(--tertiary);
     }
 
-    .typewriter { /* Can be removed if not used in hero h1 */
-      display: inline-block;
-      position: relative;
-    }
-
-    .typewriter::after {
-      content: '|';
-      position: absolute;
-      right: -8px;
-      animation: blink 1s infinite step-end;
-    }
+    /* Typewriter can be removed if not used in hero h1 based on PDF */
+    /* .typewriter { ... } */
+    /* .typewriter::after { ... } */
 
     .tech-icons {
       display: flex;
@@ -518,7 +510,7 @@
         opacity: 0.9;
         line-height: 1.7;
     }
-    .skills-list strong {
+    .skills-list strong { /* Not used in current skill setup but kept for flexibility */
         color: var(--accent);
         font-weight: 600;
     }
@@ -537,11 +529,11 @@
       font-size: 0.8rem;
     }
 
-    .project-btn {
+    .project-btn { /* Not used for projects in this version, but kept */
       display: inline-flex;
       align-items: center;
       gap: 0.5rem;
-      padding: 0.7rem 1.2rem; /* Adjusted padding */
+      padding: 0.7rem 1.2rem; 
       background: var(--accent);
       color: var(--card-bg); 
       border-radius: 8px;
@@ -618,13 +610,10 @@
         display: inline-block;
         margin-right: 3px;
     }
-    .language-dots .dot.empty {
+    .language-dots .dot.empty { /* Not used, but for potential partial proficiency */
         background-color: var(--border);
     }
 
-
-    /* Timeline, Contact, Footer CSS remains largely the same, ensure responsiveness */
-    /* ... (Rest of your CSS from previous version) ... */
 
     .timeline {
       position: relative;
@@ -689,6 +678,10 @@
       transition: all 0.3s;
       box-shadow: 0 4px 12px var(--shadow);
     }
+    .timeline-content p { /* Ensure p inside timeline has proper size */
+        font-size: 0.95rem;
+    }
+
 
     .timeline-content:hover {
       transform: translateY(-5px);
@@ -965,16 +958,16 @@
         min-height: auto; 
         padding-top: 3rem; 
         padding-bottom: 3rem;
-        align-items: center; /* Revert for column layout */
+        align-items: center; 
       }
       .hero-container {
         flex-direction: column;
         text-align: center;
-        align-items: center; /* Center items in column */
+        align-items: center; 
       }
       .hero-text {
         flex-basis: auto; 
-        justify-content: flex-start; /* Align text to top */
+        justify-content: flex-start; 
       }
        .hero-text h1 {
         font-size: 2.2rem;
@@ -986,12 +979,12 @@
         flex-basis: auto; 
         max-width: 350px; 
         margin-top: 2rem;
-        height: auto; /* Let image define height */
+        height: auto; 
       }
       .profile-image {
          max-height: 300px; 
          width: auto;
-         height: auto; /* Reset height for mobile */
+         height: auto; 
       }
       .tech-icons, .social-links {
         justify-content: center;
@@ -1085,7 +1078,7 @@
             <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/python/python-original.svg" alt="Python" title="Python">
             <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/git/git-original.svg" alt="Git" title="Git">
             <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/bash/bash-original.svg" alt="Bash" title="Bash">
-            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/metasploit/metasploit-original.svg" alt="Metasploit" title="Metasploit">
+            <img src="https://img.icons8.com/fluency/48/metasploit.png" alt="Metasploit" title="Metasploit">
           </div>
 
           <div class="social-links">
@@ -1190,7 +1183,6 @@
           <div class="project-tags" style="margin-top:0.75rem;">
             <span>AWS</span> <span>EC2</span> <span>S3</span> <span>IAM</span> <span>Cloud</span>
           </div>
-          <!-- <a href="#" target="_blank" class="project-btn"><i class="fas fa-eye"></i> View Details</a> -->
         </div>
         <div class="sub-card">
           <div style="text-align: center; margin-bottom: 1rem;">
@@ -1201,7 +1193,6 @@
           <div class="project-tags">
             <span>IoT</span> <span>Python</span> <span>Security</span> <span>Pentesting</span> <span>Raspberry Pi</span>
           </div>
-          <!-- <a href="#" target="_blank" class="project-btn"><i class="fas fa-eye"></i> View Details</a> -->
         </div>
         <div class="sub-card">
           <div style="text-align: center; margin-bottom: 1rem;">
@@ -1212,7 +1203,6 @@
           <div class="project-tags">
             <span>JavaScript</span> <span>API</span> <span>Frontend</span> <span>Web App</span>
           </div>
-          <!-- <a href="#" target="_blank" class="project-btn"><i class="fas fa-eye"></i> View Details</a> -->
         </div>
       </div>
     </div>
@@ -1312,7 +1302,7 @@
             <i class="fas fa-phone"></i>
             <div>
               <p>Phone</p>
-              <p>+91-7668993087</p> <!-- Updated from PDF -->
+              <p>+91-7668993087</p>
             </div>
           </div>
           <div class="contact-info-item">
@@ -1323,7 +1313,7 @@
             </div>
           </div>
           <div class="contact-info-item">
-            <i class="fab fa-linkedin"></i> <!-- Changed from Github to match PDF order -->
+            <i class="fab fa-linkedin"></i>
             <div>
               <p>LinkedIn</p>
               <p>linkedin.com/in/kumaraditya766899</p>
@@ -1333,7 +1323,7 @@
             <i class="fas fa-map-marker-alt"></i>
             <div>
               <p>Location</p>
-              <p>Uttarakhand, India</p> <!-- Updated from PDF -->
+              <p>Uttarakhand, India</p>
             </div>
           </div>
         </div>
@@ -1428,11 +1418,6 @@
       }
     })();
     
-    // No typewriter for static title from PDF
-    // const typewriterElement = document.querySelector('.typewriter');
-    // if (typewriterElement) { ... }
-
-
     function createBinaryAnimation() {
       const container = document.getElementById('binaryAnimation');
       if (!container) return;
