--- a/index.html
+++ b/index.html
@@ -1189,9 +1189,9 @@
             <img src="https://cdn-icons-png.flaticon.com/512/3090/3090157.png" alt="IoT Pentesting" style="height: 60px; width: auto;">
           </div>
           <h3><i class="fas fa-microchip"></i> IoT-Based Pentesting Tool</h3>
-          <p>Developed a PoC IoT penetration testing tool (Python & Raspberry Pi) to identify common vulnerabilities like weak credentials and open ports in networked devices.</p>
+          <p>Developed a PoC IoT penetration testing tool (C++ & Esp32) to identify common vulnerabilities like weak credentials and open ports in networked devices.</p>
           <div class="project-tags">
-            <span>IoT</span> <span>Python</span> <span>Security</span> <span>Pentesting</span> <span>Raspberry Pi</span>
+            <span>IoT</span> <span>C++</span> <span>Security</span> <span>Pentesting</span> <span>Espp32</span>
           </div>
         </div>
         <div class="sub-card">
