--- a/index.html
+++ b/index.html
@@ -462,10 +462,10 @@
     }
 
     .sub-card h3 {
-      margin-bottom: 1rem;
+      margin-bottom: 0.8rem; /* Slightly reduced for compactness */
       color: var(--accent);
       font-family: 'Inter', sans-serif;
-      font-size: 1.4rem; 
+      font-size: 1.3rem;  /* Slightly smaller h3 */
       line-height: 1.3; 
       display: flex;
       align-items: flex-start; 
@@ -473,7 +473,7 @@
     }
 
     .sub-card h3 i {
-      font-size: 1.2rem; 
+      font-size: 1.1rem; /* Slightly smaller icon */
       margin-top: 0.2em; 
     }
 
@@ -481,28 +481,28 @@
     .sub-card p {
       color: var(--text);
       opacity: 0.9;
-      font-size: 0.9rem; 
-      line-height: 1.6;
+      font-size: 0.85rem; /* Slightly smaller paragraph text */
+      line-height: 1.5; /* Adjusted line height */
     }
     
     .project-tags, .skill-tags { 
-        margin-top: 1rem;
+        margin-top: 0.8rem; /* Reduced margin */
         display: flex;
         flex-wrap: wrap;
-        gap: 0.5rem;
+        gap: 0.4rem; /* Reduced gap */
     }
     .project-tags span, .skill-tags span {
         background: var(--shadow);
         color: var(--accent);
-        padding: 0.3rem 0.6rem;
+        padding: 0.25rem 0.5rem; /* Smaller padding */
         border-radius: 50px;
-        font-size: 0.8rem;
+        font-size: 0.75rem; /* Smaller tag text */
     }
     .skills-list {
-        font-size: 0.9rem;
+        font-size: 0.85rem; /* Smaller skill list text */
         color: var(--text);
         opacity: 0.9;
-        line-height: 1.7;
+        line-height: 1.6;
     }
 
     .sub-card .date {
@@ -512,11 +512,11 @@
       display: flex;
       align-items: center;
       gap: 0.5rem;
-      font-size: 0.9rem;
+      font-size: 0.85rem; /* Smaller date text */
     }
 
     .sub-card .date i {
-      font-size: 0.8rem;
+      font-size: 0.75rem; /* Smaller date icon */
     }
 
     .grid {
@@ -524,7 +524,7 @@
       grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); 
       gap: 1.75rem; 
     }
-    .grid.certifications-grid { /* More columns for certifications if needed */
+    .grid.certifications-grid { 
         grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
     }
 
@@ -568,11 +568,11 @@
     }
 
     .timeline-item {
-      padding: 20px 40px;
+      padding: 15px 30px; /* Reduced padding for smaller cards */
       position: relative;
       width: 50%;
       box-sizing: border-box;
-      margin-bottom: 2rem;
+      margin-bottom: 1.5rem; /* Reduced margin */
     }
 
     .timeline-item:nth-child(odd) {
@@ -585,40 +585,48 @@
 
     .timeline-dot {
       position: absolute;
-      width: 16px;
-      height: 16px;
+      width: 14px; /* Smaller dot */
+      height: 14px;
       background-color: var(--accent);
       border-radius: 50%;
-      top: 30px;
+      top: 25px; /* Adjust position */
       z-index: 1;
-      box-shadow: 0 0 8px var(--shadow);
+      box-shadow: 0 0 6px var(--shadow); /* Smaller shadow */
     }
 
     .timeline-item:nth-child(odd) .timeline-dot {
-      right: -8px;
+      right: -7px; /* Adjust position */
     }
 
     .timeline-item:nth-child(even) .timeline-dot {
-      left: -8px;
+      left: -7px; /* Adjust position */
     }
 
     .timeline-content {
       background: var(--card-bg);
       border: 1px solid var(--border);
-      border-radius: 12px;
-      padding: 1.5rem;
+      border-radius: 10px; /* Slightly smaller radius */
+      padding: 1.25rem; /* Reduced padding */
       position: relative;
       transition: all 0.3s;
-      box-shadow: 0 4px 12px var(--shadow);
+      box-shadow: 0 3px 10px var(--shadow); /* Smaller shadow */
+    }
+    .timeline-content h3 {
+        font-size: 1.2rem; /* Smaller heading in timeline */
+        margin-bottom: 0.6rem;
+    }
+    .timeline-content h3 i {
+        font-size: 1rem;
     }
     .timeline-content p { 
-        font-size: 0.95rem;
+        font-size: 0.85rem; /* Smaller paragraph text in timeline */
+        line-height: 1.5;
     }
 
 
     .timeline-content:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 8px 20px var(--shadow);
+      transform: translateY(-4px); /* Smaller hover effect */
+      box-shadow: 0 6px 15px var(--shadow);
       border-color: var(--accent);
     }
 
@@ -925,6 +933,22 @@
       .contact-container {
         grid-template-columns: 1fr;
       }
+      /* Ensure timeline items are full width on mobile */
+       .timeline-item {
+        width: 100%;
+        padding-left: 70px; /* Keep consistent padding for dot alignment */
+        padding-right: 15px; /* Adjust right padding */
+      }
+      .timeline-item:nth-child(even) {
+        left: 0; /* Align all to left */
+      }
+      .timeline::before {
+        left: 31px; /* Adjust main timeline bar position */
+      }
+      .timeline-item:nth-child(odd) .timeline-dot,
+      .timeline-item:nth-child(even) .timeline-dot {
+        left: 24px; /* Adjust dot position to align with bar */
+      }
     }
 
     @media (max-width: 480px) {
@@ -951,25 +975,11 @@
       }
       .nav-links, .footer-links { gap: 0.8rem; }
       nav a, .footer-links a { font-size: 0.9rem; }
+      .grid.certifications-grid, .grid { /* Ensure single column for grids on small screens */
+        grid-template-columns: 1fr;
+      }
     }
 
-    @media (max-width: 768px) {
-      .timeline::before {
-        left: 31px;
-      }
-      .timeline-item {
-        width: 100%;
-        padding-left: 70px;
-        padding-right: 25px;
-      }
-      .timeline-item:nth-child(even) {
-        left: 0;
-      }
-      .timeline-item:nth-child(odd) .timeline-dot,
-      .timeline-item:nth-child(even) .timeline-dot {
-        left: 23px;
-      }
-    }
   </style>
 </head>
 <body>
@@ -987,7 +997,6 @@
       <a href="#projects">Projects</a>
       <a href="#certifications">Certifications</a>
       <a href="#strengths">Strengths</a>
-      <!-- <a href="#languages">Languages</a> Removed -->
       <a href="#contact">Contact</a>
     </div>
     <button class="toggle-btn" onclick="toggleTheme()">
@@ -1094,16 +1103,16 @@
           <div class="timeline-dot"></div>
           <div class="timeline-content">
             <h3><i class="fas fa-school"></i> Intermediate (ISC)</h3>
-            <p>The Aryan School, Dehradun (Example - Please Verify)</p> 
-            <p class="date"><i class="far fa-calendar-alt"></i> 2020 - 2021 (Example)</p>
+            <p>The Aryan School, Dehradun</p> 
+            <p class="date"><i class="far fa-calendar-alt"></i> 2020 - 2021</p>
           </div>
         </div>
         <div class="timeline-item">
           <div class="timeline-dot"></div>
           <div class="timeline-content">
             <h3><i class="fas fa-school"></i> High School (ICSE)</h3>
-            <p>The Aryan School, Dehradun (Example - Please Verify)</p>
-            <p class="date"><i class="far fa-calendar-alt"></i> 2018 - 2019 (Example)</p>
+            <p>The Aryan School, Dehradun</p>
+            <p class="date"><i class="far fa-calendar-alt"></i> 2018 - 2019</p>
           </div>
         </div>
       </div>
@@ -1167,14 +1176,14 @@
         <div class="sub-card">
           <h3><i class="fab fa-ibm"></i> Incident Response and Digital Forensics</h3>
           <p>IBM via Coursera</p>
-          <p class="date"><i class="far fa-calendar-alt"></i> Completed on May 20, 2025</p>
-          <a href="https://coursera.org/verify/3N6Z8AEIOGJT" target="_blank" class="project-btn" style="font-size:0.8rem; padding: 0.5rem 1rem; margin-top:0.75rem;">Verify</a>
+          <p class="date"><i class="far fa-calendar-alt"></i> May 20, 2025</p>
+          <!-- Verify button removed -->
         </div>
         <div class="sub-card">
           <h3><i class="fab fa-ibm"></i> Penetration Testing, Threat Hunting, and Cryptography</h3>
           <p>IBM via Coursera</p>
-          <p class="date"><i class="far fa-calendar-alt"></i> Completed on May 20, 2025</p>
-           <a href="https://coursera.org/verify/8QN6HX0KPI1U" target="_blank" class="project-btn" style="font-size:0.8rem; padding: 0.5rem 1rem; margin-top:0.75rem;">Verify</a>
+          <p class="date"><i class="far fa-calendar-alt"></i> May 20, 2025</p>
+           <!-- Verify button removed -->
         </div>
         <div class="sub-card">
           <h3><i class="fas fa-user-shield"></i> Cyber Threat Intelligence (Foundation Level)</h3>
@@ -1308,7 +1317,6 @@
       <a href="#projects">Projects</a>
       <a href="#certifications">Certifications</a>
       <a href="#strengths">Strengths</a>
-      <!-- <a href="#languages">Languages</a> Removed -->
       <a href="#contact">Contact</a>
     </div>
     <div class="social-links" style="justify-content: center; margin-top: 1.5rem;">
