--- a/index.html
+++ b/index.html
@@ -462,10 +462,10 @@
     }
 
     .sub-card h3 {
-      margin-bottom: 0.8rem; /* Slightly reduced for compactness */
+      margin-bottom: 0.8rem; 
       color: var(--accent);
       font-family: 'Inter', sans-serif;
-      font-size: 1.3rem;  /* Slightly smaller h3 */
+      font-size: 1.3rem;  
       line-height: 1.3; 
       display: flex;
       align-items: flex-start; 
@@ -473,7 +473,7 @@
     }
 
     .sub-card h3 i {
-      font-size: 1.1rem; /* Slightly smaller icon */
+      font-size: 1.1rem; 
       margin-top: 0.2em; 
     }
 
@@ -481,25 +481,25 @@
     .sub-card p {
       color: var(--text);
       opacity: 0.9;
-      font-size: 0.85rem; /* Slightly smaller paragraph text */
-      line-height: 1.5; /* Adjusted line height */
+      font-size: 0.85rem; 
+      line-height: 1.5; 
     }
     
     .project-tags, .skill-tags { 
-        margin-top: 0.8rem; /* Reduced margin */
+        margin-top: 0.8rem; 
         display: flex;
         flex-wrap: wrap;
-        gap: 0.4rem; /* Reduced gap */
+        gap: 0.4rem; 
     }
     .project-tags span, .skill-tags span {
         background: var(--shadow);
         color: var(--accent);
-        padding: 0.25rem 0.5rem; /* Smaller padding */
+        padding: 0.25rem 0.5rem; 
         border-radius: 50px;
-        font-size: 0.75rem; /* Smaller tag text */
+        font-size: 0.75rem; 
     }
     .skills-list {
-        font-size: 0.85rem; /* Smaller skill list text */
+        font-size: 0.85rem; 
         color: var(--text);
         opacity: 0.9;
         line-height: 1.6;
@@ -512,11 +512,11 @@
       display: flex;
       align-items: center;
       gap: 0.5rem;
-      font-size: 0.85rem; /* Smaller date text */
+      font-size: 0.85rem; 
     }
 
     .sub-card .date i {
-      font-size: 0.75rem; /* Smaller date icon */
+      font-size: 0.75rem; 
     }
 
     .grid {
@@ -550,29 +550,29 @@
 
     .timeline {
       position: relative;
-      max-width: 800px;
+      max-width: 750px; 
       margin: 0 auto;
-      padding: 0 20px;
+      padding: 0 15px; 
     }
 
     .timeline::before {
       content: '';
       position: absolute;
-      width: 4px;
+      width: 3px; 
       background: var(--accent);
       top: 0;
       bottom: 0;
       left: 50%;
-      margin-left: -2px;
+      margin-left: -1.5px; 
       border-radius: 2px;
     }
 
     .timeline-item {
-      padding: 15px 30px; /* Reduced padding for smaller cards */
+      padding: 10px 25px; 
       position: relative;
       width: 50%;
       box-sizing: border-box;
-      margin-bottom: 1.5rem; /* Reduced margin */
+      margin-bottom: 1rem; 
     }
 
     .timeline-item:nth-child(odd) {
@@ -585,48 +585,58 @@
 
     .timeline-dot {
       position: absolute;
-      width: 14px; /* Smaller dot */
-      height: 14px;
+      width: 12px; 
+      height: 12px; 
       background-color: var(--accent);
       border-radius: 50%;
-      top: 25px; /* Adjust position */
+      top: 20px; 
       z-index: 1;
-      box-shadow: 0 0 6px var(--shadow); /* Smaller shadow */
+      box-shadow: 0 0 5px var(--shadow); 
     }
 
     .timeline-item:nth-child(odd) .timeline-dot {
-      right: -7px; /* Adjust position */
+      right: -6px; 
     }
 
     .timeline-item:nth-child(even) .timeline-dot {
-      left: -7px; /* Adjust position */
+      left: -6px; 
     }
 
     .timeline-content {
       background: var(--card-bg);
       border: 1px solid var(--border);
-      border-radius: 10px; /* Slightly smaller radius */
-      padding: 1.25rem; /* Reduced padding */
+      border-radius: 8px; 
+      padding: 1rem; 
       position: relative;
       transition: all 0.3s;
-      box-shadow: 0 3px 10px var(--shadow); /* Smaller shadow */
+      box-shadow: 0 2px 8px var(--shadow); 
     }
     .timeline-content h3 {
-        font-size: 1.2rem; /* Smaller heading in timeline */
-        margin-bottom: 0.6rem;
+        font-size: 1.05rem; 
+        margin-bottom: 0.4rem; 
+        line-height: 1.2;
     }
     .timeline-content h3 i {
-        font-size: 1rem;
+        font-size: 0.9rem; 
+        margin-top: 0.1em;
     }
     .timeline-content p { 
-        font-size: 0.85rem; /* Smaller paragraph text in timeline */
-        line-height: 1.5;
+        font-size: 0.8rem; 
+        line-height: 1.4; 
+        margin-bottom: 0.3rem; 
+    }
+    .timeline-content .date {
+        font-size: 0.75rem; 
+        margin-top: 0.3rem;
+    }
+    .timeline-content .date i {
+        font-size: 0.7rem; 
     }
 
 
     .timeline-content:hover {
-      transform: translateY(-4px); /* Smaller hover effect */
-      box-shadow: 0 6px 15px var(--shadow);
+      transform: translateY(-3px); 
+      box-shadow: 0 4px 12px var(--shadow);
       border-color: var(--accent);
     }
 
@@ -933,22 +943,23 @@
       .contact-container {
         grid-template-columns: 1fr;
       }
-      /* Ensure timeline items are full width on mobile */
-       .timeline-item {
+       .timeline::before {
+        left: 20px; 
+        width: 3px;
+    }
+    .timeline-item {
         width: 100%;
-        padding-left: 70px; /* Keep consistent padding for dot alignment */
-        padding-right: 15px; /* Adjust right padding */
-      }
-      .timeline-item:nth-child(even) {
-        left: 0; /* Align all to left */
-      }
-      .timeline::before {
-        left: 31px; /* Adjust main timeline bar position */
-      }
-      .timeline-item:nth-child(odd) .timeline-dot,
-      .timeline-item:nth-child(even) .timeline-dot {
-        left: 24px; /* Adjust dot position to align with bar */
-      }
+        padding-left: 45px; 
+        padding-right: 10px; 
+    }
+    .timeline-item:nth-child(even) {
+        left: 0; 
+    }
+    .timeline-item:nth-child(odd) .timeline-dot,
+    .timeline-item:nth-child(even) .timeline-dot {
+        left: 14px; 
+        top: 22px; 
+    }
     }
 
     @media (max-width: 480px) {
@@ -975,7 +986,7 @@
       }
       .nav-links, .footer-links { gap: 0.8rem; }
       nav a, .footer-links a { font-size: 0.9rem; }
-      .grid.certifications-grid, .grid { /* Ensure single column for grids on small screens */
+      .grid.certifications-grid, .grid { 
         grid-template-columns: 1fr;
       }
     }
@@ -1068,7 +1079,7 @@
   </section>
 
 
-  <!-- Education Section - UPDATED -->
+  <!-- Education Section - UPDATED for smaller cards -->
   <section id="education">
     <div class="container">
       <div class="section-header">
@@ -1166,7 +1177,7 @@
     </div>
   </section>
 
-  <!-- Certifications Section - UPDATED -->
+  <!-- Certifications Section - UPDATED (Verify buttons removed, institution names kept) -->
   <section id="certifications">
     <div class="container">
       <div class="section-header">
@@ -1177,13 +1188,11 @@
           <h3><i class="fab fa-ibm"></i> Incident Response and Digital Forensics</h3>
           <p>IBM via Coursera</p>
           <p class="date"><i class="far fa-calendar-alt"></i> May 20, 2025</p>
-          <!-- Verify button removed -->
         </div>
         <div class="sub-card">
           <h3><i class="fab fa-ibm"></i> Penetration Testing, Threat Hunting, and Cryptography</h3>
           <p>IBM via Coursera</p>
           <p class="date"><i class="far fa-calendar-alt"></i> May 20, 2025</p>
-           <!-- Verify button removed -->
         </div>
         <div class="sub-card">
           <h3><i class="fas fa-user-shield"></i> Cyber Threat Intelligence (Foundation Level)</h3>
