--- a/index.html
+++ b/index.html
@@ -518,6 +518,18 @@
     .sub-card .date i {
       font-size: 0.75rem; 
     }
+    .sub-card ul { /* Styling for bullet points in project cards */
+        font-size: 0.85rem;
+        margin-top: 0.5rem;
+        padding-left: 1.2rem;
+        color: var(--text);
+        opacity: 0.9;
+        line-height: 1.5;
+    }
+    .sub-card ul li {
+        margin-bottom: 0.25rem;
+    }
+
 
     .grid {
       display: grid;
@@ -1130,7 +1142,7 @@
     </div>
   </section>
 
-  <!-- Projects Section -->
+  <!-- Projects Section - UPDATED with more details and no image icons -->
   <section id="projects">
     <div class="container">
       <div class="section-header">
@@ -1138,46 +1150,49 @@
       </div>
       <div class="grid">
         <div class="sub-card">
-          <div style="text-align: center; margin-bottom: 1rem;">
-            <img src="https://cdn-icons-png.flaticon.com/512/2305/2305999.png" alt="AWS Hosting" style="height: 60px; width: auto;">
-          </div>
           <h3><i class="fab fa-aws"></i> Basic Cloud Hosting with AWS Free Tier</h3>
-          <p>Demonstrated understanding of cloud architecture, security best practices, and hands-on experience with AWS management console.</p>
-          <ul style="font-size: 0.9rem; margin-top: 0.5rem; padding-left: 1.2rem; color: var(--text); opacity: 0.9;">
+          <p>Demonstrated understanding of cloud architecture, security best practices, and hands-on experience with AWS management console for cost-effective static website deployment.</p>
+          <ul>
             <li>Launched and configured a Linux-based EC2 instance with Apache/Nginx.</li>
-            <li>Used Amazon S3 for scalable asset storage.</li>
-            <li>Applied IAM best practices and security group rules for access control.</li>
-            <li>Demonstrated hands-on skills in cloud architecture and AWS security fundamentals.</li>
+            <li>Utilized Amazon S3 for scalable and durable asset storage.</li>
+            <li>Implemented IAM best practices and security group rules for robust access control.</li>
+            <li>Leveraged CloudFront for content delivery network (CDN) capabilities to improve performance.</li>
           </ul>
           <div class="project-tags" style="margin-top:0.75rem;">
-            <span>AWS</span> <span>EC2</span> <span>S3</span> <span>IAM</span> <span>Cloud</span>
+            <span>AWS</span> <span>EC2</span> <span>S3</span> <span>IAM</span> <span>CloudFront</span> <span>Cloud</span>
           </div>
         </div>
         <div class="sub-card">
-          <div style="text-align: center; margin-bottom: 1rem;">
-            <img src="https://cdn-icons-png.flaticon.com/512/3090/3090157.png" alt="IoT Pentesting" style="height: 60px; width: auto;">
-          </div>
           <h3><i class="fas fa-microchip"></i> IoT-Based Pentesting Tool</h3>
-          <p>Developed a PoC IoT penetration testing tool (Python & Raspberry Pi) to identify common vulnerabilities like weak credentials and open ports in networked devices.</p>
+          <p>Developed a proof-of-concept IoT penetration testing tool using Python on a Raspberry Pi to automate the discovery of common vulnerabilities in networked smart devices.</p>
+          <ul>
+            <li>Implemented scripts for network scanning and service enumeration.</li>
+            <li>Automated testing for default/weak credentials on common IoT protocols.</li>
+            <li>Designed a modular framework for adding new vulnerability checks.</li>
+            <li>Focused on identifying insecure configurations and open ports.</li>
+          </ul>
           <div class="project-tags">
-            <span>IoT</span> <span>Python</span> <span>Security</span> <span>Pentesting</span> <span>Raspberry Pi</span>
+            <span>IoT</span> <span>Python</span> <span>Security</span> <span>Pentesting</span> <span>Raspberry Pi</span> <span>Networking</span>
           </div>
         </div>
         <div class="sub-card">
-          <div style="text-align: center; margin-bottom: 1rem;">
-            <img src="https://cdn-icons-png.flaticon.com/512/1163/1163661.png" alt="Weather App" style="height: 60px; width: auto;">
-          </div>
           <h3><i class="fas fa-cloud-sun"></i> Responsive Weather App</h3>
-          <p>Built a weather application using JavaScript and a third-party API to display current weather conditions and forecasts for user-specified locations.</p>
+          <p>Built a user-friendly, responsive weather application using modern JavaScript and a third-party weather API to provide real-time meteorological data and forecasts.</p>
+          <ul>
+            <li>Integrated with OpenWeatherMap API for fetching weather information.</li>
+            <li>Displayed current temperature, humidity, wind speed, and conditions.</li>
+            <li>Included a multi-day forecast feature.</li>
+            <li>Ensured responsive design for optimal viewing on various devices.</li>
+          </ul>
           <div class="project-tags">
-            <span>JavaScript</span> <span>API</span> <span>Frontend</span> <span>Web App</span>
+            <span>JavaScript</span> <span>API</span> <span>Frontend</span> <span>HTML</span> <span>CSS</span> <span>Web App</span>
           </div>
         </div>
       </div>
     </div>
   </section>
 
-  <!-- Certifications Section - UPDATED (Verify buttons removed, institution names kept) -->
+  <!-- Certifications Section - UPDATED (Verify buttons removed) -->
   <section id="certifications">
     <div class="container">
       <div class="section-header">
