--- a/index.html
+++ b/index.html
@@ -518,8 +518,8 @@
     .sub-card .date i {
       font-size: 0.75rem; 
     }
-    .sub-card ul { /* Styling for bullet points in project cards */
-        font-size: 0.85rem;
+    .sub-card ul { 
+        font-size: 0.85rem; /* Adjusted for consistency */
         margin-top: 0.5rem;
         padding-left: 1.2rem;
         color: var(--text);
@@ -1051,7 +1051,7 @@
             <a href="https://github.com/0x1337adi" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
             <a href="mailto:kumaraditya766899@gmail.com" title="Email"><i class="fas fa-envelope"></i></a>
             <a href="https://www.credly.com/users/aditya-kumar.c9be8cb7" target="_blank" title="Credly"><i class="fas fa-award"></i></a>
-            <a href="#" title="Resume PDF"><i class="fas fa-file-pdf"></i></a>
+            <!-- Resume/PNG icon removed -->
           </div>
         </div>
         
