--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       --accent-light: #005566;
       --accent-hover-light: #004D57;
       --secondary-light: #1A73E8;
-      --tertiary-light: #6B7280; /* Used for particles */
+      --tertiary-light: #6B7280; 
       --shadow-light: rgba(0, 0, 0, 0.1);
       --gradient-light: linear-gradient(135deg, #E6F0FA 0%, #FFFFFF 100%);
 
@@ -25,10 +25,10 @@
       --card-bg-dark: #1F2A44;
       --text-dark: #E5E7EB;
       --border-dark: #374151;
-      --accent-dark: #4CAF50;
+      --accent-dark: #4CAF50; 
       --accent-hover-dark: #45A049;
       --secondary-dark: #60A5FA;
-      --tertiary-dark: #9CA3AF; /* Used for particles */
+      --tertiary-dark: #9CA3AF; 
       --shadow-dark: rgba(0, 255, 0, 0.1);
       --gradient-dark: linear-gradient(135deg, #2D3748 0%, #1F2A44 100%);
 
@@ -519,7 +519,7 @@
       font-size: 0.75rem; 
     }
     .sub-card ul { 
-        font-size: 0.85rem; /* Adjusted for consistency */
+        font-size: 0.85rem; 
         margin-top: 0.5rem;
         padding-left: 1.2rem;
         color: var(--text);
@@ -555,36 +555,37 @@
       transform: translateX(-50%);
     }
     
-    .strength-item p {
+    .strength-item p { /* This style is for the card-based strength section */
         margin-top: 0.5rem;
         font-size: 0.9rem;
     }
 
+    /* Timeline Styles - REVERTED TO ORIGINAL (for card-based look) */
     .timeline {
       position: relative;
-      max-width: 750px; 
+      max-width: 800px;
       margin: 0 auto;
-      padding: 0 15px; 
+      padding: 0 20px;
     }
 
     .timeline::before {
       content: '';
       position: absolute;
-      width: 3px; 
+      width: 4px;
       background: var(--accent);
       top: 0;
       bottom: 0;
       left: 50%;
-      margin-left: -1.5px; 
+      margin-left: -2px;
       border-radius: 2px;
     }
 
     .timeline-item {
-      padding: 10px 25px; 
+      padding: 20px 40px; /* Original padding */
       position: relative;
       width: 50%;
       box-sizing: border-box;
-      margin-bottom: 1rem; 
+      margin-bottom: 2rem; /* Original margin */
     }
 
     .timeline-item:nth-child(odd) {
@@ -597,58 +598,58 @@
 
     .timeline-dot {
       position: absolute;
-      width: 12px; 
-      height: 12px; 
+      width: 16px; /* Original dot size */
+      height: 16px;
       background-color: var(--accent);
       border-radius: 50%;
-      top: 20px; 
+      top: 30px; /* Original position */
       z-index: 1;
-      box-shadow: 0 0 5px var(--shadow); 
+      box-shadow: 0 0 8px var(--shadow); /* Original shadow */
     }
 
     .timeline-item:nth-child(odd) .timeline-dot {
-      right: -6px; 
+      right: -8px; /* Original position */
     }
 
     .timeline-item:nth-child(even) .timeline-dot {
-      left: -6px; 
+      left: -8px; /* Original position */
     }
 
-    .timeline-content {
+    .timeline-content { /* Original card style for timeline */
       background: var(--card-bg);
       border: 1px solid var(--border);
-      border-radius: 8px; 
-      padding: 1rem; 
+      border-radius: 12px; 
+      padding: 1.5rem; 
       position: relative;
       transition: all 0.3s;
-      box-shadow: 0 2px 8px var(--shadow); 
+      box-shadow: 0 4px 12px var(--shadow); 
     }
     .timeline-content h3 {
-        font-size: 1.05rem; 
-        margin-bottom: 0.4rem; 
-        line-height: 1.2;
+        font-size: 1.3rem; /* Reverted font size */
+        margin-bottom: 0.8rem; 
+        line-height: 1.3;
     }
     .timeline-content h3 i {
-        font-size: 0.9rem; 
-        margin-top: 0.1em;
+        font-size: 1.1rem; 
+        margin-top: 0.2em;
     }
     .timeline-content p { 
-        font-size: 0.8rem; 
-        line-height: 1.4; 
+        font-size: 0.85rem; 
+        line-height: 1.5; 
         margin-bottom: 0.3rem; 
     }
     .timeline-content .date {
-        font-size: 0.75rem; 
-        margin-top: 0.3rem;
+        font-size: 0.85rem; 
+        margin-top: 0.5rem;
     }
     .timeline-content .date i {
-        font-size: 0.7rem; 
+        font-size: 0.75rem; 
     }
 
 
     .timeline-content:hover {
-      transform: translateY(-3px); 
-      box-shadow: 0 4px 12px var(--shadow);
+      transform: translateY(-5px); /* Original hover effect */
+      box-shadow: 0 8px 20px var(--shadow);
       border-color: var(--accent);
     }
 
@@ -955,23 +956,22 @@
       .contact-container {
         grid-template-columns: 1fr;
       }
-       .timeline::before {
-        left: 20px; 
-        width: 3px;
-    }
-    .timeline-item {
+       /* Original Mobile Timeline */
+      .timeline::before {
+        left: 31px;
+      }
+      .timeline-item {
         width: 100%;
-        padding-left: 45px; 
-        padding-right: 10px; 
-    }
-    .timeline-item:nth-child(even) {
-        left: 0; 
-    }
-    .timeline-item:nth-child(odd) .timeline-dot,
-    .timeline-item:nth-child(even) .timeline-dot {
-        left: 14px; 
-        top: 22px; 
-    }
+        padding-left: 70px;
+        padding-right: 25px;
+      }
+      .timeline-item:nth-child(even) {
+        left: 0;
+      }
+      .timeline-item:nth-child(odd) .timeline-dot,
+      .timeline-item:nth-child(even) .timeline-dot {
+        left: 23px; /* Original mobile dot position */
+      }
     }
 
     @media (max-width: 480px) {
@@ -1051,7 +1051,6 @@
             <a href="https://github.com/0x1337adi" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
             <a href="mailto:kumaraditya766899@gmail.com" title="Email"><i class="fas fa-envelope"></i></a>
             <a href="https://www.credly.com/users/aditya-kumar.c9be8cb7" target="_blank" title="Credly"><i class="fas fa-award"></i></a>
-            <!-- Resume/PNG icon removed -->
           </div>
         </div>
         
@@ -1091,7 +1090,7 @@
   </section>
 
 
-  <!-- Education Section - UPDATED for smaller cards -->
+  <!-- Education Section - Original Timeline Style -->
   <section id="education">
     <div class="container">
       <div class="section-header">
@@ -1142,7 +1141,7 @@
     </div>
   </section>
 
-  <!-- Projects Section - UPDATED with more details and no image icons -->
+  <!-- Projects Section -->
   <section id="projects">
     <div class="container">
       <div class="section-header">
@@ -1192,7 +1191,7 @@
     </div>
   </section>
 
-  <!-- Certifications Section - UPDATED (Verify buttons removed) -->
+  <!-- Certifications Section -->
   <section id="certifications">
     <div class="container">
       <div class="section-header">
@@ -1233,7 +1232,7 @@
     </div>
   </section>
 
-  <!-- Strengths Section -->
+  <!-- Strengths Section - Original Card Style -->
   <section id="strengths">
     <div class="container">
       <div class="section-header">
@@ -1255,8 +1254,6 @@
       </div>
     </div>
   </section>
-
-  <!-- Languages Section Removed -->
 
   <!-- Contact Section -->
   <section id="contact">
