--- a/index.html
+++ b/index.html
@@ -542,7 +542,6 @@
         grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
     }
     
-    /* Styling for the combined Education & Strengths wrapper - TABLE FORMAT */
     .table-format-wrapper { 
         background-color: var(--card-bg); 
         padding: 1.5rem; 
@@ -579,7 +578,6 @@
         display: none !important; 
     }
 
-    /* Timeline Styles - VERY SMALL within combined wrapper */
     .table-format-wrapper #education .timeline {
       max-width: 100%; 
       padding: 0; 
@@ -636,8 +634,6 @@
       box-shadow: 0 2px 6px var(--shadow);
     }
 
-
-    /* Strengths Grid - VERY SMALL within combined wrapper */
     .table-format-wrapper #strengths .grid {
         gap: 0.75rem; 
         grid-template-columns: 1fr; 
@@ -916,7 +912,7 @@
       .profile-image {
         max-height: 65vh; 
       }
-      .table-format-wrapper { /* Changed from combined-section-wrapper */
+      .table-format-wrapper { 
         padding: 2rem;
       }
     }
@@ -1202,6 +1198,9 @@
       </div>
       <div class="grid">
         <div class="sub-card">
+           <div style="text-align: center; margin-bottom: 1rem;">
+            <img src="https://cdn-icons-png.flaticon.com/512/2305/2305999.png" alt="AWS Cloud Hosting" style="height: 60px; width: auto;">
+          </div>
           <h3><i class="fab fa-aws"></i> Basic Cloud Hosting with AWS Free Tier</h3>
           <p>Demonstrated understanding of cloud architecture, security best practices, and hands-on experience with AWS management console for cost-effective static website deployment.</p>
           <ul>
@@ -1215,6 +1214,9 @@
           </div>
         </div>
         <div class="sub-card">
+          <div style="text-align: center; margin-bottom: 1rem;">
+            <img src="https://cdn-icons-png.flaticon.com/512/3090/3090157.png" alt="IoT Pentesting Tool" style="height: 60px; width: auto;">
+          </div>
           <h3><i class="fas fa-microchip"></i> IoT-Based Pentesting Tool</h3>
           <p>Developed a proof-of-concept IoT penetration testing tool using Python on a Raspberry Pi to automate the discovery of common vulnerabilities in networked smart devices.</p>
           <ul>
@@ -1228,6 +1230,9 @@
           </div>
         </div>
         <div class="sub-card">
+          <div style="text-align: center; margin-bottom: 1rem;">
+            <img src="https://cdn-icons-png.flaticon.com/512/1163/1163661.png" alt="Weather App Icon" style="height: 60px; width: auto;">
+          </div>
           <h3><i class="fas fa-cloud-sun"></i> Responsive Weather App</h3>
           <p>Built a user-friendly, responsive weather application using modern JavaScript and a third-party weather API to provide real-time meteorological data and forecasts.</p>
           <ul>
