--- a/index.html
+++ b/index.html
@@ -1311,7 +1311,7 @@
             <i class="fas fa-phone"></i>
             <div>
               <p>Phone</p>
-              <p>+91-7668993087</p>
+              <p>+91-7668XXXXXX</p>
             </div>
           </div>
           <div class="contact-info-item">
