--- a/index.html
+++ b/index.html
@@ -1388,7 +1388,7 @@
           </div>
           <div class="form-group">
             <label for="phone">Phone</label>
-            <input type="tel" id="phone" name="phone" placeholder="Your Phone (e.g., +91-1234567890)">
+            <input type="tel" id="phone" name="phone" placeholder="Your Phone (e.g., 9887559394 or +91-1234567890)">
             <span class="error-message">Please enter a valid phone number</span>
           </div>
           <div class="form-group">
@@ -1526,7 +1526,7 @@
 
         // Validate phone (optional)
         const phoneValue = phone.value.trim();
-        const phoneRegex = /^(\+\d{1,3}[-.\s]?\d{10})$/;
+        const phoneRegex = /^(\d{10}|\+\d{1,3}[-.\s]?\d{10})$/;
         if (phoneValue && !phoneRegex.test(phoneValue)) {
           phone.parentElement.classList.add('error');
           isValid = false;
