--- a/index.html
+++ b/index.html
@@ -1087,7 +1087,7 @@
   <div class="binary-animation" id="binaryAnimation"></div>
 
   <nav>
-    <div class="logo">0x1337</div>
+    <div class="logo"></div>
     <div class="nav-links">
       <a href="#home">Home</a>
       <a href="#skills">Skills</a>
